Return simple security